# la-queta

./: .gitignore  DEPLOY.md  Makefile  PHASE_10_A1_PATH.md  PHASE_11_LISTENING_SPEAKING.md  PHASE_9_A1_PRACTICE.md  PRODUCT.md  STYLE_GUIDE.md  TECHNICAL_PLAN.md  environment.yml  poetry.toml  pyproject.toml
.claude/: launch.json
.cursor/rules/: frontend.mdc  la-queta-core.mdc  python.mdc
app/: __init__.py  config.py  models.py
app/routes/: api_auth.py  api_lessons.py  api_levels.py  api_vocab.py  pages.py
app/services/: auth.py  can_dos.py  errors.py  lessons.py  levels.py  practice_match.py  progress.py  seed.py  vocab.py
content/: a1_can_dos.json  a1_coverage.md  levels.json
content/decks/: days_months_deck.json  everyday_deck.json  family_deck.json  shopping_deck.json  starter_deck.json  travel_deck.json
content/lessons/: 01-noun-gender.json  02-definite-articles.json  03-ser-vs-estar.json  04-present-tense.json  05-numbers.json  06-question-words.json  07-introductions.json  (+2 more)
deploy/: la-queta.service
migrations/: env.py
prototype/: PRODUCT_INXS.md  README.md  TECHNICAL_PLAN_INXS.md  app.py  pyproject.toml  requirements.txt  store.py
scripts/: deploy.sh  seed.py
static/: app.css  app.js
templates/: _can_dos_dialog.html  base.html  browse.html  deck.html  index.html  lesson.html  level.html  levels.html  study.html  style_guide.html
tests/: conftest.py  test_auth.py  test_continue.py  test_daily.py  test_health.py  test_lessons.py  test_levels.py  test_listening.py  test_pages.py  test_practice.py  test_schema.py  test_vocab.py
(+26 files in other folders)
